--- a/index.html
+++ b/index.html
@@ -60,28 +60,9 @@
         </div>
         <button id="more-btn" class="more-btn"><i class="icon"></i></button>
       </section>
-      <section id="news-board">
-        <div class="row news">
-          <div class="col-lg-4">
-            <img
-              class="news-img-size"
-              src="https://ibighit.com/bts/images/profile/proof/member/bts-m.jpg"
-              alt=""
-            />
-          </div>
-          <div class="col-lg-8">
-            <h2>코딩알려주는 누나 수업 오픈</h2>
-            <p>
-              웹사이트 버전에서는 카테고리 버튼들이 웹사이트 타이틀 밑에 있다가,
-              모바일 버전에서는 카테고리 메뉴들이 사라지고 왼쪽 상단에 햄버거
-              메뉴들이 나오도록 하자. 그리고 햄버거 메뉴를 클릭할 시 사이드
-              메뉴가 나올 수 있도록 하자.
-            </p>
-            <div>dd</div>
-          </div>
-        </div>
-      </section>
+      <section id="news-board"></section>
     </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
     <script
       src="https://kit.fontawesome.com/1811bd825e.js"
       crossorigin="anonymous"
