--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <section class="container">
       <section>
-        <form class="search-box">
+        <form class="search-box" onsubmit="return false">
           <i
             id="search-btn"
             class="fa-solid fa-magnifying-glass search-btn"
@@ -43,20 +43,12 @@
           </svg>
         </div>
         <div id="menus" class="menus">
-          <button>Sport</button>
-          <button>Tech</button>
-          <button>World</button>
-          <button>Finance</button>
+          <button>Sports</button>
+          <button>Technology</button>
           <button>Business</button>
-          <button>Economics</button>
           <button>Entertainment</button>
-          <button>Beauty</button>
-          <button>Travel</button>
-          <button>Music</button>
-          <button>Food</button>
+          <button>General</button>
           <button>Science</button>
-          <button>Gaming</button>
-          <button>Energy</button>
         </div>
         <button id="more-btn" class="more-btn"><i class="icon"></i></button>
       </section>
