--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
         <button id="more-btn" class="more-btn"><i class="icon"></i></button>
       </section>
       <section id="news-board"></section>
+      <nav aria-label="Page navigation example">
+        <ul class="pagination"></ul>
+      </nav>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
     <script
